# specsmith

./: $null  .env.example  .gitattributes  .gitignore  AGENT-WORKFLOW-SPEC.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LEDGER.md  LICENSE  MAINTAINERS.md  PRIVACY.md  README.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  TESTS.md  TEST_SPEC.md  bench-results-4omini.json  bench-results-gpt55.json  bench-results.json  dismiss_review1.graphql  dismiss_review2.graphql  docker-compose.smoke.yml  docker-compose.yml  issues.json  mkdocs.yml  normalized_requirements.json  pyproject.toml  scaffold.yml  start-opencode.ps1  temp_comment1.json  temp_comment2.json  temp_dismiss.graphql  temp_dismiss_payload.json  temp_dismiss_rest.json  (+28 more)
.chronomemory/: events.wal  snapshot.json
.github/: FUNDING.yml  dependabot.yml
.pytest_tmp/: test_full_scaffold_workflowcurrent
.pytest_tmp/test_full_scaffold_workflow0/output/forge-cli/: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LEDGER.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  scaffold.yml
.pytest_tmp/test_full_scaffold_workflow0/output/forge-cli/.github/: PULL_REQUEST_TEMPLATE.md
.pytest_tmp/test_full_scaffold_workflow0/output/forge-cli/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.pytest_tmp/test_full_scaffold_workflow0/output/forge-cli/.github/workflows/: ci.yml  dev-release.yml  release.yml
.pytest_tmp/test_full_scaffold_workflow0/output/forge-cli/.warp/skills/: SKILL.md
.pytest_tmp/test_full_scaffold_workflow0/output/forge-cli/docs/: ARCHITECTURE.md  REQUIREMENTS.md  TEST_SPEC.md  WORKFLOW.md
.pytest_tmp/test_full_scaffold_workflow0/output/forge-cli/docs/governance/: CONTEXT-BUDGET.md  WORKFLOW.md
.pytest_tmp/test_full_scaffold_workflow0/output/forge-cli/scripts/: exec.cmd  exec.sh  run.cmd  run.sh  setup.cmd  setup.sh
.pytest_tmp/test_full_scaffold_workflow0/output/forge-cli/src/forge_cli/: __init__.py  cli.py
.roo/: global-settings.copy-to-zoo-code.json  mcp.json  modes.local.json  specsmith-rules.md
.specsmith/: agents.md.m005.bak  agents.md.m006.bak  approvals.json  config.yml  esdb-full-coverage  esdb-m009-backfill  esdb-m010-cleanup  esdb.sqlite3  ledger-chain.txt  migration-state.json  requirements.json  session_metrics.jsonl  testcases.json  trace.jsonl  workitems.json
app/: Cargo.toml  README.md
app/src/: main.rs
app/src/dispatch_panel/: controls.rs  gantt.rs  mod.rs
crates/chronomemory/: Cargo.toml
crates/chronomemory/src/: context_pack.rs  dependency.rs  lib.rs  metrics.rs  projection.rs  query.rs  replay.rs  rollback.rs  store.rs  types.rs  wal.rs
crates/chronomemory/tests/: esdb_tests.rs
docs/: AGENT-WORKFLOW-SPEC.md  ARCHITECTURE.md  COMPLIANCE.md  CROSS_PLATFORM_RELEASE_AUDIT.md  DEPRECATIONS.md  EPISTEMIC_CONTEXT_HEALTH.md  ESDB_CONTEXT_RESIDENCY.md  INVOCATION_STRATEGY.md  LAYERED_IDENTITY.md  LEDGER.20260625T090559.bak  LEDGER.md  PLANNED-REQUIREMENTS.md  PREDICTIVE_CONTEXT_RISK_PREFLIGHT.md  REFINEMENT_PLAN.md  REQUIREMENTS.md  REQUIREMENTS_GAP_REPORT.md  SPECSMITH.yml  TESTS.md  TEST_SPEC.md  VS_CODE_INTEGRATION.md  architecture.md  baseline-audit.md  codity-setup.md  demo-script.md  editions.md  hooks.py  init-modes.md  ledger-archive.20260625T090559.bak  ledger-archive.md  product-principles.md  security-threat-model.md  specsmith-zoo-code-integration.md  specsmith.yml  stability.md  typing-roadmap.md  zoo-code-enhancements-plan.md
plans/: v0.22.4-release-plan.md
scripts/: __init__.py  add_ai_regulation_requirements.py  check_dev_release.py  check_stable_release.py  delete_pypi_releases.py  exec.cmd  exec.sh  migrate_governance_to_yaml.py  migrate_planned_requirements.py  nexus_smoke.py  perf_smoke.py  platform_smoke.py  rebuild_requirements_json.py  rebuild_requirements_md.py  rebuild_testcases.py  rebuild_workitems.py  release_bootstrap.py  release_evidence.py  release_status_guard.py  rename_test_spec.py  run.cmd  run.sh  setup.cmd  setup.sh  sign_license.py  sync_governance_state.py  sync_workitems.py  validate_requirements.py  validate_testcases.py  validate_workitems.py  verify_publication.py  yank_pypi_versions.py
scripts/govern_bench/projects/data_pipeline/: pyproject.toml
scripts/govern_bench/projects/data_pipeline/pipeline/: __init__.py  etl.py
scripts/govern_bench/projects/data_pipeline/tests/: test_etl.py
scripts/govern_bench/projects/incident_console/: README.md  pyproject.toml
scripts/govern_bench/projects/incident_console/backend/: __init__.py  main.py
scripts/govern_bench/projects/incident_console/contracts/: incident.schema.json
scripts/govern_bench/projects/incident_console/docs/: architecture.md
scripts/govern_bench/projects/incident_console/tests/: test_backend.py
scripts/govern_bench/projects/incident_console/tools/: validate_contract.py  validate_ui.py
scripts/govern_bench/projects/incident_console/ui/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
scripts/govern_bench/projects/incident_console/ui/src/: App.tsx  api.ts  styles.css
scripts/govern_bench/projects/incident_console/ui/tests/: incident-console.spec.ts
scripts/govern_bench/projects/incident_console/worker/: go.mod  main.go
scripts/govern_bench/projects/todo_api/: pyproject.toml
scripts/govern_bench/projects/todo_api/app/: main.py  models.py  services.py
scripts/govern_bench/projects/todo_api/app/middleware/: auth.py
scripts/govern_bench/projects/todo_api/tests/: test_main.py
tests/: conftest.py  test_CMD_001.py  test_agent.py  test_agent_profiles.py  test_agent_run_feedback.py  test_agent_runner_ready.py  test_ai_client.py  test_ai_intelligence.py  test_architect_interview.py  test_architect_v2.py  test_architecture.py  test_audit_governance.py  test_auditor.py  test_benchmark_adaptive_control.py  test_benchmark_audit.py  test_benchmark_harness.py  test_branch_workflow.py  test_broker_scope.py  test_channel.py  test_chat_diff_decision.py  test_chat_handoff.py  test_chat_runner_openai_compat.py  (+115 more)
(+659 files in other folders)
