[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specsmith"
version = "0.11.1"
description = "Applied Epistemic Engineering toolkit — AEE agent sessions, execution profiles, FPGA/HDL governance, tool installer, 50+ CLI commands."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "BitConcepts"},
]
keywords = [
    "agentic", "scaffold", "governance", "agents-md", "cli",
    "epistemic-engineering", "belief-artifacts", "stress-testing",
    "certainty", "trace-vault", "aee", "knowledge-engineering",
    "fpga", "hdl", "vhdl", "execution-profiles", "tool-installer",
    "llm", "ollama", "requirements-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "types-pyyaml>=6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
# LLM provider extras for specsmith run (agentic client)
anthropic = ["anthropic>=0.56"]
openai = ["openai>=1.0"]
# gemini: supports both the new google-genai SDK (GA May 2025, recommended)
# and the legacy google-generativeai SDK (deprecated Nov 2025, fallback).
# The provider auto-detects which is installed.
gemini = ["google-genai>=1.0"]
mistral = ["openai>=1.0"]  # Mistral uses the openai SDK pointed at api.mistral.ai
gui = ["PySide6>=6.6"]
# AG2 agent shell (Planner/Builder/Verifier over Ollama)
ag2 = ["ag2[ollama]"]
# Optional semantic backend for `specsmith history search --semantic` (REQ-135).
# Falls back gracefully to keyword matching if these are not installed.
history-semantic = ["sentence-transformers>=2.2", "numpy>=1.24"]
# Optional whisper-cpp wrapper for the voice agent input (REQ-141).
voice = ["whisper-cpp-python>=0.2"]
# Install all optional LLM providers
agent = ["anthropic>=0.56", "openai>=1.0"]
# Convenience bundle: everything
all = [
    "anthropic>=0.56",
    "openai>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
specsmith = "specsmith.cli:main"

[project.urls]
Homepage = "https://github.com/BitConcepts/specsmith"
Documentation = "https://specsmith.readthedocs.io"
Repository = "https://github.com/BitConcepts/specsmith"
Changelog = "https://github.com/BitConcepts/specsmith/blob/main/CHANGELOG.md"
Issues = "https://github.com/BitConcepts/specsmith/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
specsmith = ["templates/**/*.j2", "agent/profiles/*.md"]
epistemic = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Long rule text and install command strings in documentation modules
"src/specsmith/toolrules.py" = ["E501"]
"src/specsmith/tool_installer.py" = ["E501"]
# One-shot rebuild scripts contain literal REQ description strings that are
# intentionally long; wrapping them would damage readability of the source
# of truth they reconstruct.
"scripts/rebuild_requirements_json.py" = ["E501"]
"scripts/rebuild_requirements_md.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
# GUI package requires PySide6, an optional extra not available in the mypy
# environment. Exclude it from type-checking to avoid false positives.
exclude = ["src/specsmith/gui"]

# Optional extras — installed by the user, not in the dev environment.
# Ignore missing stubs rather than failing type-check for absent packages.
[[tool.mypy.overrides]]
module = [
    "anthropic",
    "anthropic.*",
    "autogen",    # AG2 agent shell — optional extra
    "autogen.*",
    "openai",
    "openai.*",
    "google",
    "google.*",
    "yaml",
    "yaml.*",
    "keyring",   # optional OS credential store; stubs not published
    "keyring.*",
    "numpy",     # optional [history-semantic] extra (REQ-135)
    "numpy.*",
    "sentence_transformers",  # optional [history-semantic] extra (REQ-135)
    "sentence_transformers.*",
    "whisper_cpp_python",  # optional [voice] extra (REQ-141)
    "whisper_cpp_python.*",
]
ignore_missing_imports = true

# epistemic library has pre-existing strict-mypy issues unrelated to specsmith changes
[[tool.mypy.overrides]]
module = ["epistemic", "epistemic.*"]
ignore_errors = true

# Modules that use dynamic typing patterns incompatible with strict mypy.
# These are correct at runtime; the Any-heavy urllib, json.loads, etc. patterns
# are the source of most errors here. Exclude from strict type checking.
# REQ-111: shrunk this list as part of the pre-1.0 cleanup; broker, safety,
# console_utils, and indexer have been graduated to strict mypy.
[[tool.mypy.overrides]]
module = [
    "specsmith.ollama_cmds",
    "specsmith.languages",
    "specsmith.phase",
    "specsmith.cli",
    "specsmith.importer",
    "specsmith.agent.providers.gemini",
    "specsmith.agent.runner",
    "specsmith.agent.profiles",
    "specsmith.agent.fallback",
    "specsmith.agent.core",
    "specsmith.agent.cleanup",
    "specsmith.agent.orchestrator",
    "specsmith.agent.repl",
    "specsmith.agent.tools",
    "specsmith.profiles",
    "specsmith.serve",
    "specsmith.toolrules",
    "specsmith.tool_installer",
    "specsmith.commands.intelligence",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
