[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specsmith"
version = "0.24.0"
description = "AEE governance toolkit for AI-assisted development — session preflight gates, multi-agent dispatch, requirements↔test traceability, ESDB persistence, MCP server, and skills for Warp, Cursor, Claude Code, Copilot, Windsurf, Aider, and Zoo Code."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Layer1Labs Silicon, Inc."},
]
keywords = [
    "agentic", "scaffold", "governance", "agents-md", "cli",
    "epistemic-engineering", "belief-artifacts", "stress-testing",
    "certainty", "trace-vault", "aee", "knowledge-engineering",
    "fpga", "hdl", "vhdl", "execution-profiles", "tool-installer",
    "llm", "ollama", "requirements-management",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "click>=8.1",
    "cryptography>=42.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "types-pyyaml>=6.0",
]
esdb = [
    "chronomemory>=0.2.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
anthropic = ["anthropic>=0.56"]
openai = ["openai>=1.0"]
gemini = ["google-genai>=1.0"]
mistral = ["openai>=1.0"]
gui = ["PySide6>=6.6"]
ag2 = ["ag2[ollama]"]
history-semantic = ["sentence-transformers>=2.2", "numpy>=1.24"]
voice = ["whisper-cpp-python>=0.2"]
agent = ["anthropic>=0.56", "openai>=1.0"]
all = [
    "anthropic>=0.56",
    "openai>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
license-verify = []

[project.scripts]
specsmith = "specsmith.cli:main"

[project.urls]
Homepage = "https://github.com/layer1labs/specsmith"
Documentation = "https://specsmith.readthedocs.io"
Repository = "https://github.com/layer1labs/specsmith"
Changelog = "https://github.com/layer1labs/specsmith/blob/main/CHANGELOG.md"
Issues = "https://github.com/layer1labs/specsmith/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
specsmith = ["templates/**/*.j2", "agent/profiles/*.md"]
epistemic = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/specsmith/toolrules.py" = ["E501"]
"src/specsmith/tool_installer.py" = ["E501"]
"src/specsmith/commands/zoo_code_assets.py" = ["E501", "UP035"]
"scripts/rebuild_requirements_json.py" = ["E501"]
"scripts/rebuild_requirements_md.py" = ["E501"]
"src/specsmith/compliance/_compat.py" = ["E501"]
"src/specsmith/compliance/regulations.py" = ["E501"]
"src/specsmith/compliance/reporter.py" = ["E501"]
"src/specsmith/compliance/evidence.py" = ["E501"]
"src/specsmith/ci_manager.py" = ["E501"]
"src/specsmith/context_orchestrator.py" = ["E501"]
"src/specsmith/skills/*.py" = ["E501"]
"src/specsmith/mcp_server.py" = ["E501"]
"src/specsmith/migrations/m001_governance_yaml.py" = ["E501"]
"src/specsmith/migrations/m004_ledger_esdb.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["src/specsmith/gui"]

[[tool.mypy.overrides]]
module = [
    "anthropic",
    "anthropic.*",
    "autogen",
    "autogen.*",
    "openai",
    "openai.*",
    "google",
    "google.*",
    "yaml",
    "yaml.*",
    "keyring",
    "keyring.*",
    "numpy",
    "numpy.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "whisper_cpp_python",
    "chronomemory",
    "chronomemory.*",
    "tomllib",
    "tomli",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["epistemic", "epistemic.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "specsmith.ollama_cmds",
    "specsmith.languages",
    "specsmith.phase",
    "specsmith.cli",
    "specsmith.importer",
    "specsmith.agent.providers.gemini",
    "specsmith.agent.runner",
    "specsmith.agent.profiles",
    "specsmith.agent.fallback",
    "specsmith.agent.core",
    "specsmith.agent.cleanup",
    "specsmith.agent.orchestrator",
    "specsmith.agent.repl",
    "specsmith.agent.tools",
    "specsmith.profiles",
    "specsmith.serve",
    "specsmith.toolrules",
    "specsmith.tool_installer",
    "specsmith.commands.intelligence",
    "specsmith.agent.hf_leaderboard",
    "specsmith.agent.llm_client",
    "specsmith.agent.chat_runner",
    "specsmith.compliance.checker",
    "specsmith.compliance.evidence",
    "specsmith.compliance.reporter",
    "specsmith.compliance._compat",
    "specsmith.governance_store",
    "specsmith.migrations",
    "specsmith.migrations.runner",
    "specsmith.migrations.m001_governance_yaml",
    "specsmith.migrations.m002_agents_slim",
    "specsmith.migrations.m003_compliance_init",
    "specsmith.migrations.m004_ledger_esdb",
    "specsmith.ci_manager",
    "specsmith.context_orchestrator",
    "specsmith.session_store",
    "specsmith.mcp_server",
    "specsmith.esdb",
    "specsmith.esdb.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: exercises multiple product components or external process boundaries",
]
