[package]
name = "kairos"
version = "0.1.0"
edition = "2021"
description = "Kairos — specsmith live dispatch UI"
license = "MIT"

[[bin]]
name = "kairos"
path = "src/main.rs"

[dependencies]
# HTTP client for SSE + REST calls to specsmith serve
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
# JSON serialisation / deserialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Futures utilities
futures-util = "0.3"
# GUI framework — eframe (immediate-mode, cross-platform)
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI args
clap = { version = "4", features = ["derive"] }
