[package]
name = "chronomemory"
version = "0.1.0"
edition = "2021"
description = "ChronoMemory ESDB — Epistemic State Database engine"
license = "MIT"
authors = ["Layer1Labs", "BitConcepts, LLC"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
