[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "forge-cli"
version = "0.1.0"
description = "CLI tool (Python) — scaffold only."
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
forge_cli = "forge_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
