[project]
name = "agentic-data-pipeline"
version = "0.1.0"
description = "Benchmark demo project: pandas ETL pipeline with deliberate issues for governance testing"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "C901", "B", "I"]
ignore = ["B006"]   # B006 is intentionally present in etl.py as the mutable-default benchmark defect

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
