[project]
name = "agentic-incident-console"
version = "0.1.0"
description = "Long-horizon GovernanceBench polyglot product fixture"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
