[project]
name = "agentic-todo-api"
version = "0.1.0"
description = "Benchmark demo project: FastAPI todo API with deliberate issues for governance testing"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111",
    "pydantic>=2.0",
    "uvicorn>=0.29",
    "starlette>=0.37",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "C901", "B", "I"]
ignore = ["B006"]   # B006 is intentionally present in main.py as the T2 bug

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
